--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body{
 }
 .login-box{
     background:#fff;padding:30px 25px;border-radius:14px;width:100%;max-width:400px;text-align:center;
-    box-shadow:0 20px 50px rgba(0,0,0,.4);animation:fadeIn .4s ease;
+    box-shadow:0 20px 50px rgba(0,0,0,.4);
 }
 .login-logo{font-size:30px;font-weight:bold;margin-bottom:10px;}
 .login-logo .green{color:#2e7d32;}
@@ -37,7 +37,6 @@ select,input[type="password"]{
     background:linear-gradient(to right,#43a047,#1b5e20);
 }
 .error-msg{color:#d32f2f;font-size:14px;margin-top:8px;}
-@keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
 
 /* ---------- HEADER ---------- */
 .header{
@@ -55,9 +54,8 @@ select,input[type="password"]{
     background:linear-gradient(135deg,#2e7d32,#1b5e20);
     color:white;display:flex;align-items:center;justify-content:center;
     border-radius:12px;cursor:pointer;z-index:3000;
-    box-shadow:0 6px 20px rgba(0,0,0,.3);transition:.3s;
+    box-shadow:0 6px 20px rgba(0,0,0,.3);
 }
-.menu-toggle:hover{transform:scale(1.1);}
 
 .side-menu{
     position:fixed;
@@ -70,7 +68,7 @@ select,input[type="password"]{
     color:white;
     padding:80px 20px 20px 20px;
     transform:translateX(-100%);
-    transition:.4s cubic-bezier(.77,0,.18,1);
+    transition:transform .4s cubic-bezier(.77,0,.18,1);
     z-index:2500;
     box-shadow:10px 0 40px rgba(0,0,0,.5);
 }
@@ -81,12 +79,8 @@ select,input[type="password"]{
 .user-name{font-size:20px;font-weight:bold;margin-bottom:15px;color:#43a047;}
 .menu-btn{
     width:100%;padding:12px;margin-bottom:12px;border:none;border-radius:8px;
-    cursor:pointer;color:white;font-size:14px;transition:.3s;
+    cursor:pointer;color:white;font-size:14px;
     background:linear-gradient(to right,#333,#222);
-}
-.menu-btn:hover{
-    transform:translateX(6px);
-    background:linear-gradient(to right,#43a047,#1b5e20);
 }
 .logout-btn{background:linear-gradient(to right,#c62828,#8e0000);}
 
@@ -121,12 +115,30 @@ td{padding:10px 0;border-bottom:1px solid #eee;}
     background:#2e7d32;color:white;padding:12px 15px;
     border-radius:30px;cursor:pointer;z-index:3000;
 }
+
 #chatWindow{
-    position:fixed;bottom:80px;right:20px;
-    width:320px;height:420px;background:#1c1c1c;
-    border-radius:12px;display:none;flex-direction:column;
-    overflow:hidden;z-index:3000;
+    position:fixed;
+    bottom:80px;
+    right:20px;
+    width:320px;
+    height:420px;
+    background:#1c1c1c;
+    border-radius:12px;
+    display:flex;
+    flex-direction:column;
+    overflow:hidden;
+    z-index:3000;
+    opacity:0;
+    pointer-events:none;
+    transform:translateY(20px);
+    transition:.3s;
 }
+#chatWindow.active{
+    opacity:1;
+    pointer-events:auto;
+    transform:translateY(0);
+}
+
 #chatHeader{
     background:#2e7d32;color:white;padding:10px;font-weight:bold;
 }
@@ -147,19 +159,16 @@ td{padding:10px 0;border-bottom:1px solid #eee;}
 
 /* ---------- MOBILE ---------- */
 @media (max-width:768px){
-
   body{padding:10px;}
-
-  #chatWindow{
-    width:100%;
-    height:70vh;
-    right:0;
-    bottom:0;
-    border-radius:0;
-  }
-
   .wrapper{flex-direction:column;}
   .calculator{flex:1 1 100%;}
+  #chatWindow{
+    width:100%;
+    height:75vh;
+    right:0;
+    bottom:0;
+    border-radius:15px 15px 0 0;
+  }
 }
 </style>
 </head>
@@ -200,124 +209,158 @@ td{padding:10px 0;border-bottom:1px solid #eee;}
 <!-- CALCULATORS -->
 <div class="wrapper">
 
-  <!-- АГРОПРОМБАНК -->
-  <div class="calculator">
-    <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-    <div class="subtitle">АГРОПРОМБАНК</div>
-    <div class="hint">Введите сумму чека</div>
-    <input type="number" class="input sum">
-    <button class="btn btn-calc">РАССЧИТАТЬ</button>
-    <table>
-      <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
-      <tr><td>3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
-      <tr><td>6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
-      <tr><td>9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
-      <tr><td>12 мес.</td><td class="coef">0.875</td><td class="result"></td></tr>
-    </table>
-  </div>
+<!-- АГРОПРОМБАНК -->
+<div class="calculator">
+<div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
+<div class="subtitle">АГРОПРОМБАНК</div>
+<div class="hint">Введите сумму чека</div>
+<input type="number" class="input sum">
+<button class="btn btn-calc">РАССЧИТАТЬ</button>
+<table>
+<tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
+<tr><td>3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
+<tr><td>6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
+<tr><td>9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
+<tr><td>12 мес.</td><td class="coef">0.875</td><td class="result"></td></tr>
+</table>
+</div>
+
+<!-- ЭКСИМБАНК -->
+<div class="calculator">
+<div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
+<div class="subtitle">ЭКСИМБАНК</div>
+<div class="hint">Введите сумму чека</div>
+<input type="number" class="input sum">
+<button class="btn btn-calc">РАССЧИТАТЬ</button>
+<table>
+<tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
+<tr><td>3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
+<tr><td>6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
+<tr><td>9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
+<tr><td>12 мес.</td><td class="coef">0.886</td><td class="result"></td></tr>
+</table>
+</div>
+
+<!-- СБЕРБАНК -->
+<div class="calculator">
+<div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
+<div class="subtitle">СБЕРБАНК</div>
+<div class="hint">Введите сумму чека</div>
+<input type="number" class="input sum">
+<button class="btn btn-calc">РАССЧИТАТЬ</button>
+<table>
+<tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
+<tr><td>3 мес.</td><td class="coef">0.96</td><td class="result"></td></tr>
+<tr><td>6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
+<tr><td>9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
+<tr><td>12 мес.</td><td class="coef">0.88</td><td class="result"></td></tr>
+</table>
+</div>
 
 </div>
 
 <!-- CHAT -->
 <div id="chatToggle" onclick="toggleChat()">Чат</div>
 <div id="chatWindow">
-  <div id="chatHeader">Чат</div>
-  <div id="chatMessages"></div>
-  <div id="chatInputArea">
-    <input type="text" id="chatInput" placeholder="Введите сообщение">
-    <button id="chatSend">Отправить</button>
-  </div>
+<div id="chatHeader">Чат</div>
+<div id="chatMessages"></div>
+<div id="chatInputArea">
+<input type="text" id="chatInput" placeholder="Введите сообщение">
+<button id="chatSend">Отправить</button>
+</div>
 </div>
 
 <script>
 const users={
-  cashier:{name:"Кассир",pass:"2012"},
-  evgeniy:{name:"Евгений",pass:"0186"},
-  vadim:{name:"Вадим",pass:"2385"}
+cashier:{name:"Кассир",pass:"2012"},
+evgeniy:{name:"Евгений",pass:"0186"},
+vadim:{name:"Вадим",pass:"2385"}
 };
 let currentUser="";
 const chatKey="chatHistory";
 
 /* LOGIN */
-document.getElementById("loginBtn").onclick=function(){
-  const user=userSelect.value;
-  const pass=passwordInput.value;
-  if(pass===users[user].pass){
-    localStorage.setItem("session",JSON.stringify({user,expire:Date.now()+86400000}));
-    startSession(user);
-  } else errorMsg.textContent="Неверный пароль";
+loginBtn.onclick=function(){
+const user=userSelect.value;
+if(passwordInput.value===users[user].pass){
+localStorage.setItem("session",JSON.stringify({user,expire:Date.now()+86400000}));
+startSession(user);
+}else errorMsg.textContent="Неверный пароль";
 };
 
 window.onload=function(){
-  const saved=localStorage.getItem("session");
-  if(saved){
-    const data=JSON.parse(saved);
-    if(Date.now()<data.expire) startSession(data.user);
-    else localStorage.removeItem("session");
-  }
+const saved=localStorage.getItem("session");
+if(saved){
+const data=JSON.parse(saved);
+if(Date.now()<data.expire)startSession(data.user);
+}
 };
 
 function startSession(user){
-  currentUser=user;
-  loginScreen.style.display="none";
-  currentUserElement=document.getElementById("currentUser");
-  currentUserElement.textContent="👤 "+users[user].name;
-  loadChat();
+currentUser=user;
+loginScreen.style.display="none";
+document.getElementById("currentUser").textContent="👤 "+users[user].name;
+loadChat();
 }
 
 function logout(){
-  localStorage.removeItem("session");
-  location.reload();
+localStorage.removeItem("session");
+location.reload();
 }
 
 function toggleMenu(){
-  sideMenu.classList.toggle("active");
+sideMenu.classList.toggle("active");
 }
 
-/* CALC */
+/* CALCULATORS */
 document.querySelectorAll('.calculator').forEach(calc=>{
-  const btn=calc.querySelector('.btn-calc');
-  btn.addEventListener('click',()=>{
-    const sum=parseFloat(calc.querySelector('.sum').value);
-    if(isNaN(sum)||sum<0)return;
-    calc.querySelectorAll('.coef').forEach((c,i)=>{
-      calc.querySelectorAll('.result')[i].textContent=
-      (sum/parseFloat(c.textContent)).toLocaleString('ru-RU',{minimumFractionDigits:2});
-    });
-  });
+const btn=calc.querySelector('.btn-calc');
+btn.addEventListener('click',()=>{
+const sum=parseFloat(calc.querySelector('.sum').value);
+if(isNaN(sum)||sum<0)return;
+calc.querySelectorAll('.coef').forEach((c,i)=>{
+calc.querySelectorAll('.result')[i].textContent=
+(sum/parseFloat(c.textContent)).toLocaleString('ru-RU',{minimumFractionDigits:2});
+});
+});
 });
 
 /* CHAT */
 function toggleChat(){
-  chatWindow.style.display=chatWindow.style.display==="flex"?"none":"flex";
+chatWindow.classList.toggle("active");
 }
 
 chatSend.onclick=function(){
-  const msg=chatInput.value.trim();
-  if(!msg)return;
-  let data=JSON.parse(localStorage.getItem(chatKey)||"[]");
-  data.push({user:currentUser,text:msg});
-  localStorage.setItem(chatKey,JSON.stringify(data));
-  chatInput.value="";
-  loadChat();
+const msg=chatInput.value.trim();
+if(!msg)return;
+let data=JSON.parse(localStorage.getItem(chatKey)||"[]");
+data.push({user:currentUser,text:msg});
+localStorage.setItem(chatKey,JSON.stringify(data));
+chatInput.value="";
+loadChat();
 };
 
 function loadChat(){
-  chatMessages.innerHTML="";
-  const data=JSON.parse(localStorage.getItem(chatKey)||"[]");
-  data.forEach(m=>{
-    const d=document.createElement("div");
-    d.innerHTML="<strong>"+users[m.user].name+":</strong> "+m.text;
-    chatMessages.appendChild(d);
-  });
-  chatMessages.scrollTop=chatMessages.scrollHeight;
+chatMessages.innerHTML="";
+const data=JSON.parse(localStorage.getItem(chatKey)||"[]");
+data.forEach(m=>{
+const d=document.createElement("div");
+d.style.marginBottom="8px";
+d.innerHTML="<strong>"+users[m.user].name+":</strong> "+m.text;
+chatMessages.appendChild(d);
+});
+chatMessages.scrollTop=chatMessages.scrollHeight;
 }
 
+/* SYNC */
 window.addEventListener("storage",e=>{
-  if(e.key===chatKey)loadChat();
+if(e.key===chatKey)loadChat();
 });
-
-setInterval(loadChat,2000);
+window.addEventListener("focus",loadChat);
+document.addEventListener("visibilitychange",()=>{
+if(!document.hidden)loadChat();
+});
+setInterval(loadChat,1500);
 </script>
 
 </body>
